--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ download/
 tmp/
 .tmp/
 
+# books directory is only a placeholder
+_books/
+
 # If your team needs strict node-package
 # version management, comment out this line
 # and commit package-lock.json.
