--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     ]
   },
   "prince": {
-    "version": "books-20220701",
+    "version": "14.1",
     "license": "_prince/license.dat"
   }
 }
