update docker scripts

--- a/Dockerfile.nocert
+++ b/Dockerfile.nocert
@@ -1,5 +1,7 @@
-# Dockerfile to create a ready-to-use docker image containing
+# Dockerfile.nocert to create a ready-to-use docker image containing
 # the Accelllera Documentation Flow using the Electric Book templates
+# WARNING: This installation will disable TLS certificate checking
+# and could lead tp security issues. Instead use the Dockerfile
 
 FROM ubuntu:22.04
 
@@ -77,11 +79,11 @@ RUN wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.0g-2
   dpkg -i libssl1.1_1.1.0g-2ubuntu4_amd64.deb
 
 # Install PrinceXML for printing to PDF
-#RUN wget https://www.princexml.com/download/prince_11.4-1_ubuntu18.04_amd64.deb && \
+#RUN wget https://www.princexml.com/download/prince_11.4-1_ubuntu18.04_amd64.deb --no-check-certificate && \
 #  dpkg -i prince_11.4-1_ubuntu18.04_amd64.deb
 
 # Install pandoc for document conversion
-#RUN wget https://github.com/jgm/pandoc/releases/download/2.5/pandoc-2.5-1-amd64.deb && \
+#RUN wget https://github.com/jgm/pandoc/releases/download/2.5/pandoc-2.5-1-amd64.deb --no-check-certificate && \
 #  dpkg -i pandoc-2.5-1-amd64.deb
 
 # Update npm
@@ -112,4 +114,5 @@ RUN bash -lc "source ~/.bashrc"
 COPY --chown=adf:adf . .
 
 # Install Accellera Documentation Flow
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0 
 RUN npm install
