--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,11 @@ mathjax-enabled: true
 #            as you work. To turn off the docs, change output to false.
 # app, epub: The app and epub collections are off by default, and
 #            turned on by those formats' _config files.
-#collections:
-
+collections:
+  docs:
+    output: true
+  api:
+    output: true
 
 # --------------------------------------------
 # CHANGE THESE SETTINGS ONLY IF/WHEN NECESSARY
